--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,6 @@ visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.3
 gunicorn==20.1.0
+importlib-metadata==5.0.0
+is-disposable-email=1.0.0
+email-validator==1.3.0
