--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ Flask-WTF==0.14.3
 idna==2.10
 itsdangerous==2.0
 Jinja2==3.0
-MarkupSafe==2.0.0rc2
+MarkupSafe==2.1.1
 requests==2.24.0
 urllib3==1.25.10
 visitor==0.1.3
